--- a/checkout.html
+++ b/checkout.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.css">
 
+    <!-- Additional styling -->
+    <link rel="stylesheet" href="style.css">
+
     <!-- Bootstrap scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -62,6 +65,10 @@
 </head>
 
 <body>
+  <div class="row">
+    <img src="logo.png" height=150px>
+  </div>
+
     <div class="container">
       <table id="table">
         <thead>
